--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>whatsapp-sentiment-analysis</title>
-  <meta name="description" content="">
+  <meta name="description" content="Sentimental Analysis of WhatsApp Data">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  
+  <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+  <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
   <link rel="manifest" href="site.webmanifest">
 </head>
 
@@ -15,7 +18,10 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <p>whatsapp-sentiment-analysis</p>
+
+  <h1>Whatsapp Sentiment Analysis</h1>
+  <h2>Drag Your WhatsApp Record Here.</h2>
+  <form action="/upload" class="dropzone"></form>
 </body>
 
 </html>
