--- a/views/error.html
+++ b/views/error.html
@@ -7,6 +7,8 @@
   <title>whatsapp-sentiment-analysis</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <script type="text/javascript" src="scripts/dragdrop.min.js"></script>
 
   <link rel="manifest" href="site.webmanifest">
 </head>
@@ -15,7 +17,8 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <p>Error</p>
+  <h1>Error</h1>
+  <h2><%= message %> </h2>
 </body>
 
 </html>
