--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,3 +8,33 @@ body {
 a {
   color: #00B7FF;
 }
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+th {
+	background: #25D366;
+	width: 240px;
+	height: 60px;
+	font-size: 24px;
+	border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+td {
+	
+	text-align: center;
+	font-size: 22px;
+	height: 50px;
+	color: #fff;
+}
+
+tr:nth-child(even) {
+    background: #075E54;
+}
+
+tr:nth-child(odd) {
+    background: #128C7E;
+}
