--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,15 @@
   <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
   <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
   <link rel="manifest" href="site.webmanifest">
+  <script>
+  Dropzone.options.dropChatRecords = {
+      init: function() {
+        this.on("success", function(file) {
+           window.location = '/result';
+        });
+      }
+  };
+</script>
 </head>
 
 <body>
@@ -43,7 +52,7 @@
     </div>
   <% } else { %>
     <h2>Drag Your WhatsApp Record Here.</h2>
-    <form action="/upload" class="dropzone"></form>
+    <form action="/upload" class="dropzone" enctype="multipart/form-data" method="post" id="dropChatRecords"></form>
   <% } %>
 </body>
 
