--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,16 @@
       }
   };
 </script>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119822493-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119822493-1');
+</script>
+
 </head>
 
 <body>
